--- a/tests/html_page.html
+++ b/tests/html_page.html
@@ -467,7 +467,7 @@
         </tr>
     </table>
 </div>
-<div id="footer">
+<div id="footer"> post(at)cvk.gov.ua
     Представлені оперативні дані і документація носять інформаційний характер і не можуть використовуватись як офіційні
     документи. <br/>
     При повному або частковому використанні інформації, розміщеної на web-сайті, посилання на джерело інформації
